Add payments endpoints
